# off-ramp-service

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  diesel.toml
.github/workflows/: deploy.yml
app/: Cargo.toml
app/src/: main.rs
app/src /: main.rs
app/src /routes/: mod.rs  offramproutes.rs  paymentroutes.rs  sep12.rs  sep38.rs  sep6.rs  testdile.rs
app/src/routes/: auth.rs  info.rs  kyc.rs  mod.rs  offramproutes.rs  sep12.rs  sep24.rs  sep31.rs  sep38.rs  sep6.rs  test.rs  withdraw.rs
controllers/: Cargo.toml
controllers/src/: lib.rs
controllers/src/auth/: form.rs  mod.rs
controllers/src/info/: form.rs  mod.rs
controllers/src/kyc/: form.rs  mod.rs
controllers/src/offramp/: form.rs  mod.rs
controllers/src/offramp copy copy/: form.rs
controllers/src/payment/: form.rs  mod.rs
controllers/src/sep12/: form.rs  mod.rs
controllers/src/sep24/: form.rs  mod.rs
controllers/src/sep31/: form.rs  mod.rs
controllers/src/sep38/: form.rs  mod.rs
controllers/src/sep6/: form.rs  mod.rs
controllers/src/withdraw/: form.rs  mod.rs
helpers/: Cargo.toml
helpers/src/: asset_issuers.rs  auth.rs  common.rs  info.rs  keypair.rs  kyc.rs  lib.rs  quote.rs  stellarchain.rs  stellartoml.rs  withdraw_deposit.rs
models/: Cargo.toml  diesel.toml
models/migrations/2025-04-12-2232039_create_tables/: down.sql  up.sql
models/migrations/2025-04-12-232539_create_tables/: down.sql  up.sql
models/src/: info.rs  lib.rs  mod.rs  offramp.rs  schema.rs  sep12.rs  sep24.rs  sep31.rs  sep38.rs  sep6.rs  withdrawal.rs
models/src/common/: mod.rs
models/src/offramp/: mod.rs
services/: Cargo.toml
services/src/: auth.rs  common.rs  info.rs  kyc.rs  lib.rs  offramp.rs  offrampService.rs  paymentService.rs  sep10.rs  sep10auth.rs  sep12.rs  sep24.rs  sep31.rs  sep38.rs  sep6.rs  withdraw.rs
