[workspace]
resolver = "2"

members = ["controllers", "models", "services", "helpers", "app"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.2.8", features = ["chrono"] }
diesel-async = { version = "0.5.2", features = ["mysql"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
uuid = { version = "1.15.1", features = ["v4"] }
