[workspace]
resolver = "2"

members = ["controllers", "models", "services", "app"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.2.10", features = [
    "chrono",
    "uuid",
    "numeric",
    "postgres",
    "serde_json",
] }
diesel-async = { version = "0.5.2", features = ["mysql", "postgres"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
serde_derive = "1.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
stellar_sdk = "0.1.4"
stellar-base = "0.5.0"
anyhow = "1.0.98"
reqwest = { version = "0.12.15", features = ["json", "multipart", "blocking"] }
bigdecimal = { version = "0.4.8" }
mockall = "0.13.1"
tokio = { version = "1.44.2", features = ["full"] }
log = "0.4"
thiserror = "2.0.12"
tokio-test = "0.4"
openssl = "0.10.72"
rand = "0.9.1"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
ed25519-dalek = "2.1.1"
once_cell = "1.21.3"
stellar-xdr = "22.2.0"
base64 = "0.22.1"
toml = "0.8.22"
url = "2.5.4"
xdr-codec = "0.4.4"
postgres = "0.19.10"
mockito = "1.7.0"
bincode = "2.0.1"
multipart = "0.18.0"
