[workspace]
resolver = "2"

members = ["controllers", "app", "helpers", "services", "models"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.2.8", features = [
    "chrono",
    "uuid",
    "numeric",
    "postgres",
    "serde_json",
    "64-column-tables",
] }
diesel-async = { version = "0.5.2", features = ["mysql", "postgres"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
serde_derive = "1.0"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
stellar_sdk = "0.1.4"
stellar-base = "0.5.0"
anyhow = "1.0.70"
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
bigdecimal = { version = "0.4.7", features = ["serde"] }
mockall = "0.13.1"
tokio = { version = "1.30.0", features = ["full"] }
log = "0.4"
thiserror = "2.0.12"
tokio-test = "0.4"
openssl = "0.10.50"
rand = "0.8"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
ed25519-dalek = "2.1.1"
once_cell = "1.21.3"
stellar-xdr = "22.1.0"
base64 = "0.22.1"
toml = "0.8.20"
url = "2.5.4"
xdr-codec = "0.4.4"
postgres = "0.19.10"
mockito = "1.7.0"
bincode = "1.3"
