[package]
name = "app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
controllers = { path = "../controllers" }
models = { path = "../models" }
helpers ={ path = "../helpers"}
services = { path = "../services" }
rocket.workspace = true
dotenv.workspace = true
stellar-base.workspace = true
stellar_sdk.workspace = true




