[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
controllers = { path = "../controllers" }
models = { path = "../models" }
services = { path = "../services" }
rocket.workspace = true
dotenv.workspace = true
stellar-base.workspace = true
stellar_sdk.workspace = true
uuid.workspace = true
