[package]
name = "helpers"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket.workspace = true
stellar_sdk.workspace = true
stellar-base.workspace = true
mockall.workspace = true
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tokio-test.workspace = true
dotenv.workspace = true
openssl.workspace = true
rand.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
once_cell.workspace = true
stellar-xdr.workspace = true
base64.workspace = true
toml.workspace = true
url.workspace = true
mockito.workspace = true 

