[package]
name = "helpers"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket.workspace= true 
stellar_sdk.workspace= true 
stellar-base.workspace= true 
stellar-xdr.workspace= true 
mockall.workspace= true 
anyhow.workspace= true 
tokio-test.workspace= true 
dotenv.workspace= true 
openssl.workspace= true 
rand.workspace= true 
hex.workspace= true 
jsonwebtoken.workspace= true 
ed25519-dalek.workspace= true 
serde.workspace= true 
reqwest.workspace= true 
tokio.workspace= true 
url.workspace= true 
thiserror.workspace= true 
toml.workspace= true 
chrono.workspace= true 

