[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
rocket.workspace = true
serde.workspace = true
serde_json.workspace = true
diesel.workspace = true
dotenv.workspace = true
diesel-async.workspace = true
uuid.workspace = true
bigdecimal.workspace = true
