[package]
name = "services"
version = "0.1.0"
edition = "2024"

[dependencies]
helpers = { path = "../helpers" }
models = { path = "../models" }
rocket.workspace = true
diesel.workspace = true
diesel-async.workspace = true
stellar_sdk.workspace = true
stellar-base.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
bigdecimal.workspace = true
mockall.workspace = true
tokio.workspace = true
log.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
once_cell.workspace = true
base64.workspace = true
xdr-codec.workspace = true
toml.workspace = true
serde_derive.workspace = true
multipart.workspace = true
